welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: Boolean does not take parameters
	while(!vuBiscuit())
                        ^